fix: form width on mobile :bug:

--- a/src/components/form.module.scss
+++ b/src/components/form.module.scss
@@ -72,7 +72,7 @@ Media Queries
 
 @media only screen and (max-width: 767px) {
   .form {
-    max-width: 25rem;
+    // max-width: 25rem;
     padding: 0;
     border: 0;
   }
